# memorytest

./: .gitignore  README.md  long_term_goal.md  progress.md  pyproject.toml  roadmap.md  stage_01_environment_and_baseline.md  stage_02_terminal_assistant_mvp.md  stage_03_episodic_memory_foundation.md
chat-log/: chat.md
evals/: stage1_terminal_eval_suite.json
src/memorytest/: __init__.py  benchmark.py  chat.py  config.py  evals.py  prompts.py  storage.py  summary_prompt_v1.py  summary_prompt_v1_1.py  summary_prompt_v1_2.py
src/memorytest/adapters/: __init__.py  base.py  factory.py  ollama.py  openai_compat.py
tests/: test_adapters.py  test_benchmark.py  test_chat_prompt.py  test_evals.py  test_storage.py  test_summary_prompt_v1_2.py
