[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memorytest"
version = "0.1.0"
description = "Terminal-first local assistant scaffold with swappable LLM backends."
requires-python = ">=3.11"

[project.scripts]
memorytest-chat = "memorytest.chat:main"
memorytest-benchmark = "memorytest.benchmark:main"
memorytest-eval = "memorytest.evals:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
